done page structure

--- a/index.html
+++ b/index.html
@@ -25,47 +25,53 @@
     <article class="cards card-one">
       <img src="images/illustration-grow-together.svg" alt="two-peaple-chat">
       <p class="main-head">Grow Together</p>
-      <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+      <p class="main-content">Generate meaningful discussions with your audience and build a strong, loyal community. 
         Think of the insightful conversations you miss out on with a feedback form. </p>
     </article>
     <article class="cards card-two">
       <img src="images/illustration-flowing-conversation.svg" alt="four-person-chat">
       <p class="main-head">Flowing Conversations</p>
-      <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+      <p class="main-content">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
         have just-in-time loading for a more natural flow.</p>
     </article>
     <article class="cards card-there">
       <img src="images/illustration-your-users.svg" alt="User-chat-together">
       <p class="main-head">Your Users</p>
-      <p>It takes no time at all to integrate Huddle with your app's authentication solution. 
+      <p class="main-content">It takes no time at all to integrate Huddle with your app's authentication solution. 
         This means, once signed in to your app, your users can start chatting immediately.</p>
     </article>
-    <section>
+    <section class="community-card">
       <p>Ready To Build Your Community?</p>
-      <a href="#">Get Started For Free</a>
+      <a href="#" class="">Get Started For Free</a>
     </section>
   </main>
   <footer>
-    <img src="images/logo.svg" alt="Huddle-logo">
-    <img src="images/icon-location.svg" alt="location-logo">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-      incididunt ut labore et dolore magna aliqua</p>
-    <img src="images/icon-phone.svg" alt="phone-logo">
-    <p>+1-543-123-4567</p>
-    <img src="images/icon-email.svg" alt="email-logo">
-    <section>
+    <img src="images/logo 2.svg" alt="footer-logo" class="footer-logo">
+    <section class="footer-contact">
+      <img src="images/icon-location.svg" alt="location-logo">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+        incididunt ut labore et dolore magna aliqua</p>
+      <img src="images/icon-phone.svg" alt="phone-logo">
+      <p>+1-543-123-4567</p>
+      <img src="images/icon-email.svg" alt="email-logo">
       <p>example@huddle.com</p>
-      <p>About Us</p>
-      <p>What We Do</p>
-      <p>FAQ</p>
-      <p>Career</p>
-      <p>Blog</p>
-      <p>Contact Us</p>
     </section>
-    <section>
-      <img src="images/" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+    <section class="footer-links">
+      <a href="#">About Us</a>
+      <a href="#">What We Do</a>
+      <a href="#">FAQ</a>
+      <a href="#">Career</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact Us</a>
+    </section>
+    <section class="footer-social">
+      <a href="#"><img src="images/fk.svg" alt="icon-facebook" class="social-img"></a>
+      <a href="#"><img src="images/tr.svg" alt="" class="social-img"></a>
+      <a href="#"><img src="images/im.svg" alt="" class="social-img"></a>
+    </section>
+    <section class="footer-copyright">
+      <img src="images/copyright.svg" alt="copyright-logo" class="copyright-logo">
+      <p>Copyright 2018 Huddle. All rights reserved.</p>
     </section>
   </footer>
 </body>
