edit some stucture for gridbox

--- a/index.html
+++ b/index.html
@@ -14,31 +14,42 @@
       <a href="#" class="head-top-link">Try It Free</a>
     </div>
     <div class="header-content">
-      <p class="head-address">Build The Community Your Fans Will Love</p>
-      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-        Create connections with your users as you engage in genuine discussion. </p>
-      <a href="#" class="head-bottom-link">Get Started For Free</a>
+      <div class="header-content-card">
+        <p class="head-address">Build The Community Your Fans Will Love</p>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+          Create connections with your users as you engage in genuine discussion. </p>
+        <a href="#" class="head-bottom-link">Get Started For Free</a>
+      </div>
+      <!-- <div></div> -->
+      
       <img src="images/illustration-mockups.svg" alt="illustration-mockups" class="mockups-img">
     </div>
   </header>
   <main>
     <article class="cards card-one">
       <img src="images/illustration-grow-together.svg" alt="two-peaple-chat">
-      <p class="main-head">Grow Together</p>
-      <p class="main-content">Generate meaningful discussions with your audience and build a strong, loyal community. 
+      <div>
+        <p class="main-head">Grow Together</p>
+        <p class="main-content">Generate meaningful discussions with your audience and build a strong, loyal community. 
         Think of the insightful conversations you miss out on with a feedback form. </p>
+      </div>
+      
     </article>
     <article class="cards card-two">
       <img src="images/illustration-flowing-conversation.svg" alt="four-person-chat">
-      <p class="main-head">Flowing Conversations</p>
-      <p class="main-content">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+      <div>
+        <p class="main-head">Flowing Conversations</p>
+        <p class="main-content">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
         have just-in-time loading for a more natural flow.</p>
+      </div>
     </article>
     <article class="cards card-there">
       <img src="images/illustration-your-users.svg" alt="User-chat-together">
-      <p class="main-head">Your Users</p>
-      <p class="main-content">It takes no time at all to integrate Huddle with your app's authentication solution. 
+      <div>
+        <p class="main-head">Your Users</p>
+        <p class="main-content">It takes no time at all to integrate Huddle with your app's authentication solution. 
         This means, once signed in to your app, your users can start chatting immediately.</p>
+      </div>
     </article>
     <section class="community-card">
       <p>Ready To Build Your Community?</p>
@@ -47,28 +58,30 @@
   </main>
   <footer>
     <img src="images/logo 2.svg" alt="footer-logo" class="footer-logo">
-    <section class="footer-contact">
-      <img src="images/icon-location.svg" alt="location-logo">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-        incididunt ut labore et dolore magna aliqua</p>
-      <img src="images/icon-phone.svg" alt="phone-logo">
-      <p>+1-543-123-4567</p>
-      <img src="images/icon-email.svg" alt="email-logo">
-      <p>example@huddle.com</p>
-    </section>
-    <section class="footer-links">
-      <a href="#">About Us</a>
-      <a href="#">What We Do</a>
-      <a href="#">FAQ</a>
-      <a href="#">Career</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact Us</a>
-    </section>
-    <section class="footer-social">
-      <a href="#"><img src="images/fk.svg" alt="icon-facebook" class="social-img"></a>
-      <a href="#"><img src="images/tr.svg" alt="" class="social-img"></a>
-      <a href="#"><img src="images/im.svg" alt="" class="social-img"></a>
-    </section>
+    <div class="footer-grid">
+      <section class="footer-contact">
+        <img src="images/icon-location.svg" alt="location-logo">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+          incididunt ut labore et dolore magna aliqua</p>
+        <img src="images/icon-phone.svg" alt="phone-logo">
+        <p>+1-543-123-4567</p>
+        <img src="images/icon-email.svg" alt="email-logo">
+        <p>example@huddle.com</p>
+      </section>
+      <section class="footer-links">
+        <a href="#">About Us</a>
+        <a href="#">What We Do</a>
+        <a href="#">FAQ</a>
+        <a href="#">Career</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact Us</a>
+      </section>
+      <section class="footer-social">
+        <a href="#"><img src="images/fk.svg" alt="icon-facebook" class="social-img"></a>
+        <a href="#"><img src="images/tr.svg" alt="" class="social-img"></a>
+        <a href="#"><img src="images/im.svg" alt="" class="social-img"></a>
+      </section>
+    </div>
     <section class="footer-copyright">
       <img src="images/copyright.svg" alt="copyright-logo" class="copyright-logo">
       <p>Copyright 2018 Huddle. All rights reserved.</p>
